# game-system-checks

./: .gitignore  LICENSE  meson.build
include/: checklist_info.h  checklist_item.h  checklist_nvidia.h  gl_info.h  pci.h
src/: checklist_nvidia.cpp  gl_info.cpp  main.cpp  pci.cpp
